--- a/H2.md
+++ b/H2.md
@@ -1,6 +1,62 @@
-# this is a test headline
-and this a paragraåh
-## another header
+# H2
+
+## Getting started 
+As i created a new clean vm for this exercise i needed to start by making the necessary updates. 
 ```
-some code
+$ sudo apt-get update
+$ sudo apt-get dist-upgrade
+```
+Next installed lshw to see some information about the system and cheked the os after that
+```
+$ sudo apt-get install lshw
+$ sudo lshw -short -class processor -class memory
+
+memory   128Kib BIOS
+memory   4GiB System memory
+processor Intel(R) Core(TM) -7-10710U CPU @ 1.10G
+
+$grep '^VERSION' /etc/os-release
+
+VERSION_ID="11"
+VERSION="11 (bullseye)"
+VERSION_CODENAME=bullseye
+
+```
+So, nothing out of the ordinary. Debian bullseye running on 4Gib memory and a reasonable intel CPU. Moving on.
+
+## Installing apache 
+### The manual way
+Eventhough i knew apache was not installed, still checked it. After confirmed that apache was not installed, installed it. Installed ufw and made a hole for http, activated firewall, started apache and tested if it was running.
+```
+$ systemctl status apache2
+
+Unit apache2.service could not be found.
+
+$sudo apt-get install apache2  
+
+$sudo apt-get install ufw
+$sudo ufw allow http
+$sudo ufw enable 
+$sudo systemtl start apache2
+$curl https://localhost
+$curl --head http://localhost
+HTTP/1.1 200 OK
+Date . . .
+Server: Apache/2.4.54 (Debian)
+.
+.
+```
+With the curl-command to https, i saw that the firewall was blocking the 443 since i hadn't opened it - hence ufw was working correctly.
+Based on a response to curl --head http://localhost i saw that the apache was now working correctly too.
+
+## Next doing the same with salt
+Started by installing salt-master and salt-minion. Checked the results with ls.
+```
+$sudo apt-get -y install salt-master
+$sudo apt-get -y install salt-minion
+
+$ls -l /etc/salt
+master  master.d  minion  minion.d
+```
+
 ```
