--- a/H2.md
+++ b/H2.md
@@ -50,13 +50,61 @@ With the curl-command to https, i saw that the firewall was blocking the 443 sin
 Based on a response to curl --head http://localhost i saw that the apache was now working correctly too.
 
 ## Next doing the same with salt
-Started by installing salt-master and salt-minion. Checked the results with ls.
+Started by installing salt-master and salt-minion. 
 ```
 $sudo apt-get -y install salt-master
 $sudo apt-get -y install salt-minion
 
-$ls -l /etc/salt
-master  master.d  minion  minion.d
+```
+Next created the path to my future salt state, made init.sls file to install apache2 and tested the result
+```
+$sudo mkdir /srv/salt/apache
+$sudo nano /srv/salt/apache/init.sls
+
+apache
+  pkg.installed:
+    - name: apache2
+
+$sudo salt-call --local state.apply apache
+        .
+Succeeded: 1
+Failed:    0
+------------
+Total states run:       1
+Total run time     41.359 ms
+```
+Next plan was to add ufw to installed packages and punch a hole to ufw via cmd.run. Started out by denying http and diabling ufw for test purposes.
+```
+$sudo ufw deny http
+$sudo ufw status
+.
+80/TCP                  DENY  
+80/TCP  (v6)            DENY
+.
+
+$sudo ufw disable
+$sudo ufw status
+
+Status: inactive
+```
+Connections to port 80 are now blocked and the firewall is deactivated. Then went back to init.sls and added the following two parts. First one opens the port for http unless it is already open. The second one enables ufw unless it is already active.
+```
+ufw allow 80/tcp:
+  cmd.run:
+    - unless: "ufw status verbose | grep '80/tcp'"
+    
+ ufw enable:
+   cmd.run:
+     - unless: "ufw status | grep 'Status: active'"
+```
+Next ran my apache-state and did the ufw tests again.
+```
+$sudo salt-call --local state.apply apache
+$sudo ufw status
+Status: active
+.
+80/tcp            ALLOW
+80/tcp  (v6)      ALLOW
 ```
 
-```
+
