--- a/H2.md
+++ b/H2.md
@@ -37,7 +37,7 @@ $sudo apt-get install apache2
 $sudo apt-get install ufw
 $sudo ufw allow http
 $sudo ufw enable 
-$sudo systemtl start apache2
+$sudo systemctl start apache2
 $curl https://localhost
 $curl --head http://localhost
 HTTP/1.1 200 OK
