--- a/H2.md
+++ b/H2.md
@@ -107,4 +107,6 @@ Status: active
 80/tcp  (v6)      ALLOW
 ```
 
-
+## sources
+https://terokarvinen.com/2022/palvelinten-hallinta-2022p2/
+https://docs.saltproject.io/en/latest/
